--- a/SimpleApplication/public/index.html
+++ b/SimpleApplication/public/index.html
@@ -9,9 +9,7 @@
     <title>First Project</title>
   </head>
   <body>
-    <script src="https://sdk.scdn.co/spotify-player.js"></script>
-  </script>
-  <script>
+    <script src="https://sdk.scdn.co/spotify-player.js">
     window.onSpotifyWebPlaybackSDKReady = () => {
       const token = 'BQASwVEa4mvW3SOtLQxTaQclrNb1x9mQTamYTMNY1jIbSXFGQzNe8g1kZ7hPzQ9pc9awAf3V_SfV1a84LoIvg5FjYDeoZCkUONDXLrErWHkV35Qk1ITNLswrUwmWxgxRUwgh3EJmoAIUZHp7O5weShrqLrs0QdJuPOHW7w';
       const player = new Spotify.Player({
