--- a/SimpleApplication/public/index.html
+++ b/SimpleApplication/public/index.html
@@ -7,39 +7,9 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <title>First Project</title>
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
   </head>
   <body>
-    <script src="https://sdk.scdn.co/spotify-player.js">
-    window.onSpotifyWebPlaybackSDKReady = () => {
-      const token = 'BQASwVEa4mvW3SOtLQxTaQclrNb1x9mQTamYTMNY1jIbSXFGQzNe8g1kZ7hPzQ9pc9awAf3V_SfV1a84LoIvg5FjYDeoZCkUONDXLrErWHkV35Qk1ITNLswrUwmWxgxRUwgh3EJmoAIUZHp7O5weShrqLrs0QdJuPOHW7w';
-      const player = new Spotify.Player({
-        name: 'Web Playback SDK Quick Start Player',
-        getOAuthToken: cb => { cb(token); }
-      });
-
-      // Error handling
-      player.addListener('initialization_error', ({ message }) => { console.error(message); });
-      player.addListener('authentication_error', ({ message }) => { console.error(message); });
-      player.addListener('account_error', ({ message }) => { console.error(message); });
-      player.addListener('playback_error', ({ message }) => { console.error(message); });
-
-      // Playback status updates
-      player.addListener('player_state_changed', state => { console.log(state); });
-
-      // Ready
-      player.addListener('ready', ({ device_id }) => {
-        console.log('Ready with Device ID', device_id);
-      });
-
-      // Not Ready
-      player.addListener('not_ready', ({ device_id }) => {
-        console.log('Device ID has gone offline', device_id);
-      });
-
-      // Connect to the player!
-      player.connect();
-    };
-  </script>
     <div id="root"></div>
   </body>
 </html>
