--- a/SimpleApplication/public/index.html
+++ b/SimpleApplication/public/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
   </head>
   <body>
+    <script src="https://sdk.scdn.co/spotify-player.js"></script>
     <div id="root"></div>
   </body>
 </html>
